<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dialog Tutorial</string>
    <string name="create_view_dialog_example">Using OnCreateView</string>
    <string name="create_dialog_example">Using OnCreateDialog</string>
    <string name="display_bare_alert_dialog">Display Bare AlertDialog</string>
    <string name="display_dialog_and_view_as_dialog">Show OnCreateDialogAndView as Dialog</string>
    <string name="display_dialog_and_view_as_embedded">Show OnCreateDialogAndView embedded</string>
    <string name="create_view_dialog_embedded">Show OnCreateView Embedded</string>
</resources>
