<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context=".MainActivity"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <Button
        android:text="@string/create_view_dialog_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="displayOnCreateViewDialogFragment"
        />

    <Button
        android:text="@string/create_dialog_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="displayOnCreateDialogFragment"
        />

    <Button
        android:text="@string/display_bare_alert_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="displayBareAlertDialog"
        />

    <Button
        android:text="@string/display_dialog_and_view_as_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="displayOnCreateDialogAndViewAsDialog"
        />

    <Button
        android:text="@string/display_dialog_and_view_as_embedded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="displayOnCreateDialogAndViewAsEmbedded"
        />

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</LinearLayout>
